fix: shift and caps work as intended

--- a/src/sass/abstracts/_colors.scss
+++ b/src/sass/abstracts/_colors.scss
@@ -7,3 +7,4 @@ $border-key-color: darken($bg-key-color, 5);
 $bg-key-color-secondary: #fff4de;
 $keyboard-shadow: #292929;
 $bg-body-color: beige;
+$caps-lock-active-color: rgb(23, 95, 40);
